[Misc] Fix SonarQube issues by making public static constants immutable
* java:S2386 mutable fields should not be "public static"

Co-Authored-By: Vincent Massol <vincent@massol.net>